// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapFromWindowsTheme should map corresponding properties directly 1`] = `
Object {
  "anchor": "#00001c",
  "anchorVisited": "#00001c",
  "borderDark": "#000005",
  "borderDarkest": "#000001",
  "borderLight": "#000004",
  "borderLightest": "#000003",
  "canvas": "#00000c",
  "canvasText": "#00000e",
  "canvasTextDisabled": "#000005",
  "canvasTextDisabledShadow": "#000003",
  "canvasTextInvert": "#00001b",
  "checkmark": "#00000e",
  "checkmarkDisabled": "#000019",
  "desktopBackground": "#000009",
  "flatDark": "#000005",
  "flatLight": "#000004",
  "focusSecondary": "#000003",
  "headerBackground": "#00000f",
  "headerNotActiveBackground": "#000012",
  "headerNotActiveText": "#000013",
  "headerText": "#000014",
  "hoverBackground": "#00001a",
  "material": "#000002",
  "materialDark": "#000012",
  "materialText": "#000006",
  "materialTextDisabled": "#000005",
  "materialTextDisabledShadow": "#000003",
  "materialTextInvert": "#00001b",
  "name": "theme",
  "progress": "#00001a",
  "scale": 2,
  "shadow": true,
  "tooltip": "#00001e",
}
`;

exports[`mapFromWindowsTheme should support gradients and shadows and scale 1`] = `
Object {
  "anchor": "#00001c",
  "anchorVisited": "#00001c",
  "borderDark": "#000005",
  "borderDarkest": "#000001",
  "borderLight": "#000004",
  "borderLightest": "#000003",
  "canvas": "#00000c",
  "canvasText": "#00000e",
  "canvasTextDisabled": "#000005",
  "canvasTextDisabledShadow": "#000003",
  "canvasTextInvert": "#00001b",
  "checkmark": "#00000e",
  "checkmarkDisabled": "#000019",
  "desktopBackground": "#000009",
  "flatDark": "#000005",
  "flatLight": "#000004",
  "focusSecondary": "#000003",
  "headerBackground": "linear-gradient(to right, #00000f, #000010)",
  "headerNotActiveBackground": "linear-gradient(to right, #000012, #000011)",
  "headerNotActiveText": "#000013",
  "headerText": "#000014",
  "hoverBackground": "#00001a",
  "material": "#000002",
  "materialDark": "#000012",
  "materialText": "#000006",
  "materialTextDisabled": "#000005",
  "materialTextDisabledShadow": "#000003",
  "materialTextInvert": "#00001b",
  "name": "theme",
  "progress": "#00001a",
  "scale": 1.5,
  "shadow": false,
  "tooltip": "#00001e",
}
`;
